I committed this so that KJP can fix it
- Cursed boots

--- a/src/main/resources/assets/lustrousness/lang/en_us.json
+++ b/src/main/resources/assets/lustrousness/lang/en_us.json
@@ -3,5 +3,7 @@
   "item.lustrousness.small_backpack": "Small Backpack",
   "item.lustrousness.medium_backpack": "Medium Backpack",
   "item.lustrousness.large_backpack": "Large Backpack",
-  "item.lustrousness.adventure_backpack": "Adventure Backpack"
+  "item.lustrousness.adventure_backpack": "Adventure Backpack",
+
+  "item.lustrousness.slime_sling": "Slime Sling"
 }
